fix(speakers): bring back overflow but without visible scrollbar

--- a/styles.css
+++ b/styles.css
@@ -23,4 +23,13 @@
     .content-block p, .p {
         @apply text-base mb-3;
     }
+
+    .scrollbar-hide {
+        -ms-overflow-style: none; 
+        scrollbar-width: none;
+    }
+
+    .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+    }
 }
